2007-11-23  Benno Schulenberg <bensberg@justemail.net>

	* info/infodoc.c: keep help strings together for translation.

2007-11-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* util/texi2dvi: Fix quoting for white space in file names.

2007-11-21  Karl Berry  <karl@gnu.org>

	* makeinfo/lang.h (hz): #undef, since apparently it is defined on
	AIX 4.3.3.
	Report from: Gary E. Barnes, 21 Nov 2007 12:37:12.

2007-11-16  Karl Berry  <karl@gnu.org>

	* info/info.c (info_error): use puts instead of fprintf if we
	don't actually have any arguments.  Else
	info --file=".%x.%x." will try to print NULL.
	Report from Cody Rester, 16 Nov 2007 08:59:48.

2007-10-31  Karl Berry  <karl@gnu.org>

	* doc/txi-no.tex: rename to txi-nb.tex.
	* po/no.po: remove.
	* po/LINGUAS: remove no.	

2007-10-24  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (cm_node),
	* makeinfo/cmds.c (cm_settitle): no need to call xml_begin_document.
	* makeinfo/makeinfo.c (convert_from_loaded_file): call
	xml_begin_document in docbook case too, else some frontmatter
	can be lost.
	Bug report from Sam Varshavchik, 14 Oct 2007 12:10:04, for binutils.
	
	* makeinfo/insertion.c: formatting.

	* makeinfo/xml.c (xml_begin_document): arg can be const;
	use basename of @setfilename instead of "book-root".
	(xml_push_current_element, xml_pop_current_element): use
	warning fn for consistent formatting.

	* util/dir-example: binutils update, etc.

2007-10-24  Sergey Poznyakoff  <gray@gnu.org.ua>

	* util/gendocs.sh: New option --texi2html, to use texi2html for
	creating HTML output.
	Handle special conditional constructs in the template: %%IF
	HTML_SECTION%% and %%IF HTML_CHAPTER%% (both closed with a
	corresponding %%ENDIF) to conditionally enable parts of the output
	depending on texi2html split outputs.
	* util/gendocs_template: Conditionally enable section and chapter
	split HTMLs.
	* util/gendocs_template_min: Likewise.

2007-10-19  Karl Berry  <karl@gnu.org>
