@@ -439,12 +439,21 @@ DECLARE_INFO_COMMAND (info_next_index_match,
 
   info_set_node_of_window (1, window, node);
 
-  /* Try to find an occurence of LABEL in this node. */
   {
-    long start, loc;
+    long loc;
+    long line = index_index[i]->line_number - 1;
 
-    start = window->line_starts[1] - window->node->contents;
-    loc = info_target_search_node (node, index_index[i]->label, start);
+    if (line >= 0 && line < window->line_count)
+      {
+	/* Jump to the line number specified in the index entry.  */
+	loc = window->line_starts[line] - window->node->contents;
+      }
+    else
+      {
+	/* Try to find an occurence of LABEL in this node. */
+	long start = window->line_starts[1] - window->node->contents;
+	loc = info_target_search_node (node, index_index[i]->label, start);
+      }
 
     if (loc != -1)
       {
